fixed the spacing variables

--- a/assets-css/variabili.css
+++ b/assets-css/variabili.css
@@ -85,13 +85,18 @@
   --green-100:#84ebb4;
   --green-200:#1fc16b;
 
-  /* ===== SPACING ===== */
-  --spacing-xs: 4px;
-  --spacing-sm: 8px;
-  --spacing-md: 16px;
-  --spacing-lg: 32px;
-  --spacing-xl: 48px;
-  --spacing-xxl: 64px;
+/* ===== SPACING ===== */
+--spacing-0: 0px;
+--spacing-1: 4px;
+--spacing-2: 8px;
+--spacing-3: 12px;
+--spacing-4: 16px;
+--spacing-5: 20px;
+--spacing-6: 24px;
+--spacing-7: 32px;
+--spacing-8: 40px;
+--spacing-9: 48px;
+--spacing-10: 64px;
   
   /* ===== LAYOUT ===== */
   --container-mobile: calc(100% - 32px);
